Fix T55484: Border zoom fails in Edit-Mode